--- a/gjb/čeština/maturita-četba.html
+++ b/gjb/čeština/maturita-četba.html
@@ -118,11 +118,11 @@
 <td dir="ltr"><a data-href="Petra Soukupová" href="gjb/čeština/autoři/petra-soukupová.html" class="internal-link" target="_self" rel="noopener nofollow">Petra Soukupová</a></td>
 <td dir="ltr"><a data-href="K moři" href="gjb/čeština/knihy/k-moři.html" class="internal-link" target="_self" rel="noopener nofollow">K moři</a></td>
 <td dir="ltr">X</td>
-<td dir="auto"></td>
+<td dir="ltr">X</td>
 </tr>
 <tr>
 <td dir="ltr"><a data-href="Petra Soukupová" href="gjb/čeština/autoři/petra-soukupová.html" class="internal-link" target="_self" rel="noopener nofollow">Petra Soukupová</a></td>
-<td dir="ltr"><a data-href="Zmizet" href="Zmizet" class="internal-link" target="_self" rel="noopener nofollow">Zmizet</a></td>
+<td dir="ltr"><a data-href="Zmizet" href="gjb/čeština/knihy/zmizet.html" class="internal-link" target="_self" rel="noopener nofollow">Zmizet</a></td>
 <td dir="auto">/</td>
 <td dir="auto"></td>
 </tr>
