--- a/gjb/čeština/lit.-druhy/epika.html
+++ b/gjb/čeština/lit.-druhy/epika.html
@@ -18,7 +18,7 @@
 <li data-line="3" dir="auto">pásmo vypravěče a pásmo postav</li>
 <li data-line="4" dir="auto">důležitý je čas: druhy kompozice (např. chronologická, rámcová...)</li>
 </ul></div><div class="el-h3 heading-wrapper"><h3 data-heading="Žánry epiky" dir="auto" class="heading" id="Žánry_epiky"><div class="heading-collapse-indicator collapse-indicator collapse-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-icon right-triangle"><path d="M3 8L12 17L21 8"></path></svg></div>Žánry epiky</h3><div class="heading-children"><div class="el-ul"><ul>
-<li data-line="0" dir="auto">kratší - <a data-href="Povídka" href="Povídka" class="internal-link" target="_self" rel="noopener nofollow">Povídka</a></li>
+<li data-line="0" dir="auto">kratší - <a data-href="Povídka" href="gjb/čeština/lit.-druhy/lit.-poddruhy/povídka.html" class="internal-link" target="_self" rel="noopener nofollow">Povídka</a></li>
 <li data-line="1" dir="auto">střední - <a data-href="Novela" href="gjb/čeština/lit.-druhy/lit.-poddruhy/novela.html" class="internal-link" target="_self" rel="noopener nofollow">Novela</a></li>
 <li data-line="2" dir="auto">delší - <a data-href="Román" href="gjb/čeština/lit.-druhy/lit.-poddruhy/román.html" class="internal-link" target="_self" rel="noopener nofollow">Román</a></li>
 <li data-line="3" dir="auto"><a data-href="Bajka" href="gjb/čeština/lit.-druhy/lit.-poddruhy/bajka.html" class="internal-link" target="_self" rel="noopener nofollow">Bajka</a></li>
